added logout, follow, unfollow, and home page
